# carymrobbins.github.io

./: .ackrc  .gitignore  CNAME  Makefile  README.md  archive.html  bower.json  caryrobbins-com.cabal  index.html  site.hs  stack.yaml
archive/: index.html
css/: default.css  default.scss  vim.css
dev/error-state/: index.html
dev/guitar-pro-linux/: index.html
dev/hp-stream-wifi/: index.html
dev/installing-ghc-mod/: index.html
dev/java-scala-collections/: index.html
dev/merging-case-classes/: index.html
dev/overriding-type-class-instances/: index.html
dev/overriding-type-class-instances-2/: index.html
dev/postgres-indexes/: index.html
dev/postgres-scripting/: index.html
dev/sbt-publishing/: index.html
dev/scala-macros-intro/: index.html
dev/scala-type-curry/: index.html
dev/variadic/: index.html
drafts/dev/: 2016-11-01-rebase.md  2017-04-12-monads-in-haskell-and-scala.md  2017-04-17-sbt-publishing.md  2017-09-19-performant-effects.md  2018-04-26-merging-case-classes.md  2019-04-29-derivation-for-type-families.md
posts/dev/: 2016-01-21-postgres-indexes.md  2016-01-26-postgres-indexes.md  2016-05-17-postgres-scripting.md  2016-05-31-scala-type-curry.md  2016-06-10-hp-stream-wifi.md  2016-07-07-java-scala-collections.md  2016-07-24-guitar-pro-linux.md  2016-08-12-scala-macros-intro.md  2017-04-17-sbt-publishing.md  2018-03-12-sbt-publishing.md  2018-04-26-merging-case-classes.md  2018-12-27-installing-ghc-mod.md  2019-08-09-overriding-type-class-instances.md  (+3 more)
templates/: default.html  disqus.html  post-list.html  post.html
