name:               caryrobbins-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , directory
                  , filepath
                  , hakyll
                  , hakyll-sass
                  , regex-compat
  ghc-options:      -threaded
  default-language: Haskell2010
